(comics) Fix comic titles on mobile with long titles

--- a/client/app/components/comics/components/comic/Comic.pcss
+++ b/client/app/components/comics/components/comic/Comic.pcss
@@ -23,6 +23,10 @@
     padding: 0 15px;
   }
 
+  .comic__title {
+    word-break: break-word;
+  }
+
   .comic__title,
   .comic__description,
   .comic__characters h2,
